@@ -61,7 +61,7 @@ public abstract class RegexURLFilterBase implements URLFilter {
   private final static Logger LOG = LoggerFactory.getLogger(RegexURLFilterBase.class);
 
   /** An array of applicable rules */
-  private RegexRule[] rules;
+  private List<RegexRule> rules;
 
   /** The current configuration */
   private Configuration conf;
@@ -125,10 +125,10 @@ public abstract class RegexURLFilterBase implements URLFilter {
    * -------------------------- */
   
   // Inherited Javadoc
-  public synchronized String filter(String url) {
-    for (int i=0; i<rules.length; i++) {
-      if (rules[i].match(url)) {
-        return rules[i].accept() ? url : null;
+  public String filter(String url) {
+    for (RegexRule rule : rules) {
+      if (rule.match(url)) {
+        return rule.accept() ? url : null;
       }
     };
     return null;
@@ -174,11 +174,11 @@ public abstract class RegexURLFilterBase implements URLFilter {
    * @param reader is a reader of regular expressions rules.
    * @return the corresponding {@RegexRule rules}.
    */
-  private RegexRule[] readRules(Reader reader)
+  private List<RegexRule> readRules(Reader reader)
     throws IOException, IllegalArgumentException {
 
     BufferedReader in = new BufferedReader(reader);
-    List rules = new ArrayList();
+    List<RegexRule> rules = new ArrayList<RegexRule>();
     String line;
        
     while((line=in.readLine())!=null) {
@@ -205,7 +205,7 @@ public abstract class RegexURLFilterBase implements URLFilter {
       RegexRule rule = createRule(sign, regex);
       rules.add(rule);
     }
-    return (RegexRule[]) rules.toArray(new RegexRule[rules.size()]);
+    return rules;
   }
 
   /**
