@@ -1,6 +1,8 @@
 Nutch Change Log
 
 Release nutchgora - Current Development
+* NUTCH-1352 Improve regex urlfilters/normalizers synchronization (ferdy)
+
 * NUTCH-1356 ParseUtil use ExecutorService instead of manually thread handling. (ferdy)
 
 * NUTCH-1355 nutchgora Configure minimum throughput for fetcher
